samples/_failures_safe/1761663860_990907_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcf2a015.c: In function ‘main’:
./samples/SAFE/__tmp_fcf2a015.c:153:39: error: expected ‘)’ at end of input
  153 |     if (decompressed.size != input_len
      |        ~                              ^
      |                                       )
./samples/SAFE/__tmp_fcf2a015.c:153:5: error: expected declaration or statement at end of input
  153 |     if (decompressed.size != input_len
      |     ^~
